añadido codigo para sacar csv

--- a/recoleccion_datos.ipynb
+++ b/recoleccion_datos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "68722b7d-ec10-4e00-9108-5c2e2ba70a6e",
    "metadata": {},
    "outputs": [
@@ -58,6 +58,8 @@
       "Pidiendo 2013, geo_id 9...\n",
       "Pidiendo 2013, geo_id 10...\n",
       "Pidiendo 2013, geo_id 11...\n",
+      "Error en 2013,geo_id 11: HTTPSConnectionPool(host='apidatos.ree.es', port=443): Read timed out. (read timeout=10)\n",
+      "Pidiendo 2013, geo_id 11...\n",
       "Pidiendo 2013, geo_id 13...\n",
       "Pidiendo 2013, geo_id 14...\n",
       "Pidiendo 2013, geo_id 15...\n",
@@ -72,8 +74,6 @@
       "Pidiendo 2014, geo_id 4...\n",
       "Pidiendo 2014, geo_id 5...\n",
       "Pidiendo 2014, geo_id 6...\n",
-      "Pidiendo 2014, geo_id 7...\n",
-      "Error en 2014,geo_id 7: HTTPSConnectionPool(host='apidatos.ree.es', port=443): Read timed out. (read timeout=10)\n",
       "Pidiendo 2014, geo_id 7...\n",
       "Pidiendo 2014, geo_id 8...\n",
       "Pidiendo 2014, geo_id 9...\n",
@@ -303,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\David\\AppData\\Local\\Temp\\ipykernel_32332\\1545706804.py:69: FutureWarning: In a future version of pandas, parsing datetimes with mixed time zones will raise an error unless `utc=True`. Please specify `utc=True` to opt in to the new behaviour and silence this warning. To create a `Series` with mixed offsets and `object` dtype, please use `apply` and `datetime.datetime.strptime`\n",
+      "C:\\Users\\jsole\\AppData\\Local\\Temp\\ipykernel_22536\\1545706804.py:69: FutureWarning: In a future version of pandas, parsing datetimes with mixed time zones will raise an error unless `utc=True`. Please specify `utc=True` to opt in to the new behaviour and silence this warning. To create a `Series` with mixed offsets and `object` dtype, please use `apply` and `datetime.datetime.strptime`\n",
       "  df[\"datetime\"] = pd.to_datetime(df[\"datetime\"])\n"
      ]
     }
@@ -385,8 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "1a61cdb6-56b7-4634-bf1d-1914049c6c54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.makedirs(\"ccaa_separadas_csv\", exist_ok=True)\n",
+    "\n",
+    "for ccaa in df[\"comunidad\"].unique():\n",
+    "    df_filtrado = df[df[\"comunidad\"] == ccaa].copy()\n",
+    "    nombre = ccaa.replace(\" \", \"_\")\n",
+    "    df_filtrado.to_csv(f\"ccaa_separadas_csv/{nombre}.csv\", index=False, encoding=\"utf-8\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "469b2951",
    "metadata": {},
    "outputs": [
     {
@@ -418,39 +436,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1720</th>\n",
+       "      <th>0</th>\n",
        "      <td>2011-01-01 00:00:00+01:00</td>\n",
-       "      <td>2526982.724</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <td>3611370.158</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Andalucía</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1721</th>\n",
+       "      <th>1</th>\n",
        "      <td>2011-02-01 00:00:00+01:00</td>\n",
-       "      <td>2271565.119</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <td>3206557.695</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Andalucía</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1722</th>\n",
+       "      <th>2</th>\n",
        "      <td>2011-03-01 00:00:00+01:00</td>\n",
-       "      <td>2373753.059</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <td>3363760.649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Andalucía</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1723</th>\n",
+       "      <th>3</th>\n",
        "      <td>2011-04-01 00:00:00+02:00</td>\n",
-       "      <td>1961970.722</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <td>2902823.703</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Andalucía</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1724</th>\n",
+       "      <th>4</th>\n",
        "      <td>2011-05-01 00:00:00+02:00</td>\n",
-       "      <td>2095019.601</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <td>2988726.944</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Andalucía</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -460,78 +478,85 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1887</th>\n",
-       "      <td>2024-12-01 00:00:00+01:00</td>\n",
-       "      <td>2293651.324</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <th>24091</th>\n",
+       "      <td>2025-09-18 00:00:00+02:00</td>\n",
+       "      <td>713.725</td>\n",
+       "      <td>8745</td>\n",
+       "      <td>Comunidad de Melilla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1888</th>\n",
-       "      <td>2025-01-01 00:00:00+01:00</td>\n",
-       "      <td>2419143.001</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <th>24092</th>\n",
+       "      <td>2025-09-19 00:00:00+02:00</td>\n",
+       "      <td>701.919</td>\n",
+       "      <td>8745</td>\n",
+       "      <td>Comunidad de Melilla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1889</th>\n",
-       "      <td>2025-02-01 00:00:00+01:00</td>\n",
-       "      <td>2113165.684</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <th>24093</th>\n",
+       "      <td>2025-09-20 00:00:00+02:00</td>\n",
+       "      <td>645.879</td>\n",
+       "      <td>8745</td>\n",
+       "      <td>Comunidad de Melilla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1890</th>\n",
-       "      <td>2025-03-01 00:00:00+01:00</td>\n",
-       "      <td>2260877.500</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <th>24094</th>\n",
+       "      <td>2025-09-21 00:00:00+02:00</td>\n",
+       "      <td>620.992</td>\n",
+       "      <td>8745</td>\n",
+       "      <td>Comunidad de Melilla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1891</th>\n",
-       "      <td>2025-04-01 00:00:00+02:00</td>\n",
-       "      <td>1943735.039</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Comunidad Valenciana</td>\n",
+       "      <th>24095</th>\n",
+       "      <td>2025-09-22 00:00:00+02:00</td>\n",
+       "      <td>725.219</td>\n",
+       "      <td>8745</td>\n",
+       "      <td>Comunidad de Melilla</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>172 rows × 4 columns</p>\n",
+       "<p>24096 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       datetime        value  geo_id             comunidad\n",
-       "1720  2011-01-01 00:00:00+01:00  2526982.724      15  Comunidad Valenciana\n",
-       "1721  2011-02-01 00:00:00+01:00  2271565.119      15  Comunidad Valenciana\n",
-       "1722  2011-03-01 00:00:00+01:00  2373753.059      15  Comunidad Valenciana\n",
-       "1723  2011-04-01 00:00:00+02:00  1961970.722      15  Comunidad Valenciana\n",
-       "1724  2011-05-01 00:00:00+02:00  2095019.601      15  Comunidad Valenciana\n",
-       "...                         ...          ...     ...                   ...\n",
-       "1887  2024-12-01 00:00:00+01:00  2293651.324      15  Comunidad Valenciana\n",
-       "1888  2025-01-01 00:00:00+01:00  2419143.001      15  Comunidad Valenciana\n",
-       "1889  2025-02-01 00:00:00+01:00  2113165.684      15  Comunidad Valenciana\n",
-       "1890  2025-03-01 00:00:00+01:00  2260877.500      15  Comunidad Valenciana\n",
-       "1891  2025-04-01 00:00:00+02:00  1943735.039      15  Comunidad Valenciana\n",
+       "                        datetime        value  geo_id             comunidad\n",
+       "0      2011-01-01 00:00:00+01:00  3611370.158       4             Andalucía\n",
+       "1      2011-02-01 00:00:00+01:00  3206557.695       4             Andalucía\n",
+       "2      2011-03-01 00:00:00+01:00  3363760.649       4             Andalucía\n",
+       "3      2011-04-01 00:00:00+02:00  2902823.703       4             Andalucía\n",
+       "4      2011-05-01 00:00:00+02:00  2988726.944       4             Andalucía\n",
+       "...                          ...          ...     ...                   ...\n",
+       "24091  2025-09-18 00:00:00+02:00      713.725    8745  Comunidad de Melilla\n",
+       "24092  2025-09-19 00:00:00+02:00      701.919    8745  Comunidad de Melilla\n",
+       "24093  2025-09-20 00:00:00+02:00      645.879    8745  Comunidad de Melilla\n",
+       "24094  2025-09-21 00:00:00+02:00      620.992    8745  Comunidad de Melilla\n",
+       "24095  2025-09-22 00:00:00+02:00      725.219    8745  Comunidad de Melilla\n",
        "\n",
-       "[172 rows x 4 columns]"
+       "[24096 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_madrid = df[df[\"comunidad\"] == \"Comunidad Valenciana\"]\n",
-    "df_madrid"
+    "df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d22f2a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-mi_entorno]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-anaconda3-mi_entorno-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -543,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
