--- a/codigo_lambda.ipynb
+++ b/codigo_lambda.ipynb
@@ -8,14 +8,14 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "import requests\n",
-    "import datetime\n",
+    "import csv\n",
     "import os\n",
-    "import pandas as pd\n",
+    "import datetime\n",
+    "from collections import defaultdict\n",
     "\n",
     "s3 = boto3.client(\"s3\")\n",
     "\n",
-    "# Diccionario geo_id -> comunidad\n",
+    "\n",
     "geo_dict = {\n",
     "    4:\"Andalucía\", 5:\"Aragón\", 6:\"Cantabria\", 7:\"Castilla la Mancha\",\n",
     "    8:\"Castilla y León\", 9:\"Cataluña\", 10:\"País Vasco\",\n",
@@ -26,60 +26,46 @@
     "    8742:\"Islas Canarias\", 20:\"La Rioja\", 21:\"Región de Murcia\"\n",
     "}\n",
     "\n",
-    "lista_de_geo_ids = list(geo_dict.keys())\n",
-    "url = \"https://apidatos.ree.es/es/datos/demanda/evolucion\"\n",
+    "BUCKET_NAME = \"proyectohabree\"\n",
+    "DATA_KEY = \"demanda_evolucion.csv\"  \n",
     "\n",
     "def lambda_handler(event, context):\n",
     "    hoy = datetime.date.today()\n",
-    "    start_date = hoy.strftime(\"%Y-%m-%dT00:00\")\n",
-    "    end_date = hoy.strftime(\"%Y-%m-%dT23:59\")\n",
+    "    prefix = f\"demanda_diaria/{hoy}/\"\n",
     "\n",
-    "    registros = []\n",
+    "    #Descargar CSV completo de S3\n",
+    "    local_csv = \"/tmp/demanda_evolucion.csv\"\n",
+    "    s3.download_file(BUCKET_NAME, DATA_KEY, local_csv)\n",
     "\n",
-    "    # === Descargar datos de la API ===\n",
-    "    for geo_id in lista_de_geo_ids:\n",
-    "        params = {\n",
-    "            \"start_date\": start_date,\n",
-    "            \"end_date\": end_date,\n",
-    "            \"time_trunc\": \"day\",\n",
-    "            \"geo_limit\": \"ccaa\",\n",
-    "            \"geo_ids\": geo_id\n",
-    "        }\n",
-    "        resp = requests.get(url, params=params, timeout=10)\n",
-    "        resp.raise_for_status()\n",
-    "        data = resp.json()\n",
+    "    #Leer CSV y agrupar filas por comunidad\n",
+    "    grupos = defaultdict(list)\n",
+    "    with open(local_csv, newline='', encoding=\"utf-8\") as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        fieldnames = reader.fieldnames + [\"comunidad\"]  # añadir columna comunidad\n",
+    "        for row in reader:\n",
+    "            geo_id = int(row[\"geo_id\"])\n",
+    "            comunidad = geo_dict.get(geo_id, \"Desconocida\")\n",
+    "            row[\"comunidad\"] = comunidad\n",
+    "            grupos[comunidad].append(row)\n",
     "\n",
-    "        for v in data[\"included\"][0][\"attributes\"][\"values\"]:\n",
-    "            registros.append({\n",
-    "                \"datetime\": v[\"datetime\"],\n",
-    "                \"value\": v[\"value\"],\n",
-    "                \"geo_id\": geo_id,\n",
-    "                \"comunidad\": geo_dict[geo_id]\n",
-    "            })\n",
-    "\n",
-    "    df = pd.DataFrame(registros)\n",
-    "\n",
-    "    # === Guardar un CSV por cada CCAA en /tmp ===\n",
-    "    bucket_name = os.environ[\"proyectohabree\"]   # nombre del bucket como variable de entorno\n",
-    "    prefix = f\"demanda_diaria/{hoy}/\"         # carpeta en S3\n",
-    "\n",
-    "    for ccaa in df[\"comunidad\"].unique():\n",
-    "        df_filtrado = df[df[\"comunidad\"] == ccaa].copy()\n",
-    "        nombre = ccaa.replace(\" \", \"_\") + \".csv\"\n",
+    "    #Crear CSV por comunidad y subir a S3 \n",
+    "    for comunidad, filas in grupos.items():\n",
+    "        nombre = comunidad.replace(\" \", \"_\") + \".csv\"\n",
     "        ruta_local = f\"/tmp/{nombre}\"\n",
     "        ruta_s3 = prefix + nombre\n",
     "\n",
-    "        # Guardar localmente\n",
-    "        df_filtrado.to_csv(ruta_local, index=False, encoding=\"utf-8\")\n",
+    "        with open(ruta_local, \"w\", newline='', encoding=\"utf-8\") as f_out:\n",
+    "            writer = csv.DictWriter(f_out, fieldnames=fieldnames)\n",
+    "            writer.writeheader()\n",
+    "            writer.writerows(filas)\n",
     "\n",
-    "        # Subir a S3\n",
-    "        s3.upload_file(ruta_local, bucket_name, ruta_s3)\n",
-    "        print(f\"Subido: s3://{bucket_name}/{ruta_s3}\")\n",
+    "        s3.upload_file(ruta_local, BUCKET_NAME, ruta_s3)\n",
+    "        print(f\"Subido: s3://{BUCKET_NAME}/{ruta_s3}\")\n",
     "\n",
     "    return {\n",
     "        \"statusCode\": 200,\n",
-    "        \"body\": f\"Archivos diarios guardados en s3://{bucket_name}/{prefix}\"\n",
-    "    }"
+    "        \"body\": f\"Archivos diarios guardados en s3://{BUCKET_NAME}/{prefix}\"\n",
+    "    }\n"
    ]
   }
  ],
