--- a/recoleccion_datos.ipynb
+++ b/recoleccion_datos.ipynb
@@ -554,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "mi_entorno",
    "language": "python",
    "name": "python3"
   },
@@ -568,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
