--- a/codigo_lambda.ipynb
+++ b/codigo_lambda.ipynb
@@ -7,15 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
+    "import requests\n",
     "import csv\n",
     "import os\n",
     "import datetime\n",
+    "import boto3\n",
     "from collections import defaultdict\n",
     "\n",
+    "# Cliente S3\n",
     "s3 = boto3.client(\"s3\")\n",
     "\n",
-    "\n",
+    "# Diccionario Comunidades\n",
     "geo_dict = {\n",
     "    4:\"Andalucía\", 5:\"Aragón\", 6:\"Cantabria\", 7:\"Castilla la Mancha\",\n",
     "    8:\"Castilla y León\", 9:\"Cataluña\", 10:\"País Vasco\",\n",
@@ -27,35 +29,54 @@
     "}\n",
     "\n",
     "BUCKET_NAME = \"proyectohabree\"\n",
-    "DATA_KEY = \"demanda_evolucion.csv\"  \n",
     "\n",
     "def lambda_handler(event, context):\n",
     "    hoy = datetime.date.today()\n",
+    "    start_date = hoy.strftime(\"%Y-%m-%dT00:00\")\n",
+    "    end_date = hoy.strftime(\"%Y-%m-%dT23:59\")\n",
     "    prefix = f\"demanda_diaria/{hoy}/\"\n",
     "\n",
-    "    #Descargar CSV completo de S3\n",
-    "    local_csv = \"/tmp/demanda_evolucion.csv\"\n",
-    "    s3.download_file(BUCKET_NAME, DATA_KEY, local_csv)\n",
+    "    #Solicitud a la API para los datos de hoy\n",
+    "    url = \"https://apidatos.ree.es/es/datos/demanda/evolucion\"\n",
+    "    params = {\n",
+    "        \"start_date\": start_date,\n",
+    "        \"end_date\": end_date,\n",
+    "        \"time_trunc\": \"day\",\n",
+    "        \"geo_limit\": \"ccaa\"\n",
+    "    }\n",
     "\n",
-    "    #Leer CSV y agrupar filas por comunidad\n",
+    "    resp = requests.get(url, params=params, timeout=20)\n",
+    "    resp.raise_for_status()\n",
+    "    data = resp.json()\n",
+    "\n",
+    "    #Agrupar por comunidad\n",
     "    grupos = defaultdict(list)\n",
-    "    with open(local_csv, newline='', encoding=\"utf-8\") as f:\n",
-    "        reader = csv.DictReader(f)\n",
-    "        fieldnames = reader.fieldnames + [\"comunidad\"]  # añadir columna comunidad\n",
-    "        for row in reader:\n",
-    "            geo_id = int(row[\"geo_id\"])\n",
-    "            comunidad = geo_dict.get(geo_id, \"Desconocida\")\n",
-    "            row[\"comunidad\"] = comunidad\n",
-    "            grupos[comunidad].append(row)\n",
+    "    for item in data.get(\"included\", [])[0].get(\"attributes\", {}).get(\"values\", []):\n",
+    "        geo_id_raw = item.get(\"geo_id\")\n",
+    "        if geo_id_raw is None:\n",
+    "            continue  \n",
+    "        try:\n",
+    "            geo_id = int(geo_id_raw)\n",
+    "        except (TypeError, ValueError):\n",
+    "            geo_id = -1 \n",
     "\n",
-    "    #Crear CSV por comunidad y subir a S3 \n",
+    "        comunidad = geo_dict.get(geo_id, \"Desconocida\")\n",
+    "        row = {\n",
+    "            \"datetime\": item.get(\"datetime\"),\n",
+    "            \"value\": item.get(\"value\"),\n",
+    "            \"geo_id\": geo_id,\n",
+    "            \"comunidad\": comunidad\n",
+    "        }\n",
+    "        grupos[comunidad].append(row)\n",
+    "\n",
+    "    #Crear CSV por comunidad y subir a S3\n",
     "    for comunidad, filas in grupos.items():\n",
     "        nombre = comunidad.replace(\" \", \"_\") + \".csv\"\n",
     "        ruta_local = f\"/tmp/{nombre}\"\n",
     "        ruta_s3 = prefix + nombre\n",
     "\n",
     "        with open(ruta_local, \"w\", newline='', encoding=\"utf-8\") as f_out:\n",
-    "            writer = csv.DictWriter(f_out, fieldnames=fieldnames)\n",
+    "            writer = csv.DictWriter(f_out, fieldnames=[\"datetime\", \"value\", \"geo_id\", \"comunidad\"])\n",
     "            writer.writeheader()\n",
     "            writer.writerows(filas)\n",
     "\n",
