--- a/codigo_lambda.ipynb
+++ b/codigo_lambda.ipynb
@@ -9,83 +9,57 @@
    "source": [
     "import requests\n",
     "import csv\n",
-    "import os\n",
     "import datetime\n",
     "import boto3\n",
-    "from collections import defaultdict\n",
     "\n",
-    "# Cliente S3\n",
     "s3 = boto3.client(\"s3\")\n",
-    "\n",
-    "# Diccionario Comunidades\n",
-    "geo_dict = {\n",
-    "    4:\"Andalucía\", 5:\"Aragón\", 6:\"Cantabria\", 7:\"Castilla la Mancha\",\n",
-    "    8:\"Castilla y León\", 9:\"Cataluña\", 10:\"País Vasco\",\n",
-    "    11:\"Principado de Asturias\", 8744:\"Comunidad de Ceuta\",\n",
-    "    8745:\"Comunidad de Melilla\", 13:\"Comunidad de Madrid\",\n",
-    "    14:\"Comunidad de Navarra\", 15:\"Comunidad Valenciana\",\n",
-    "    16:\"Extremadura\", 17:\"Galicia\", 8743:\"Islas Baleares\",\n",
-    "    8742:\"Islas Canarias\", 20:\"La Rioja\", 21:\"Región de Murcia\"\n",
-    "}\n",
-    "\n",
     "BUCKET_NAME = \"proyectohabree\"\n",
     "\n",
     "def lambda_handler(event, context):\n",
-    "    hoy = datetime.date.today()\n",
-    "    start_date = hoy.strftime(\"%Y-%m-%dT00:00\")\n",
-    "    end_date = hoy.strftime(\"%Y-%m-%dT23:59\")\n",
-    "    prefix = f\"demanda_diaria/{hoy}/\"\n",
+    "    \n",
+    "    ayer = datetime.date.today() - datetime.timedelta(days=1)\n",
+    "    start_date = ayer.strftime(\"%Y-%m-%dT00:00\")\n",
+    "    end_date = ayer.strftime(\"%Y-%m-%dT23:59\")\n",
+    "    prefix = f\"demanda_diaria/{ayer}/\"\n",
     "\n",
-    "    #Solicitud a la API para los datos de hoy\n",
+    "    # Solicitud a la API solo para la península\n",
     "    url = \"https://apidatos.ree.es/es/datos/demanda/evolucion\"\n",
     "    params = {\n",
     "        \"start_date\": start_date,\n",
     "        \"end_date\": end_date,\n",
     "        \"time_trunc\": \"day\",\n",
-    "        \"geo_limit\": \"ccaa\"\n",
+    "        \"geo_limit\": \"peninsula\"\n",
     "    }\n",
     "\n",
-    "    resp = requests.get(url, params=params, timeout=20)\n",
+    "    resp = requests.get(url, params=params, timeout=30)\n",
     "    resp.raise_for_status()\n",
     "    data = resp.json()\n",
     "\n",
-    "    #Agrupar por comunidad\n",
-    "    grupos = defaultdict(list)\n",
-    "    for item in data.get(\"included\", [])[0].get(\"attributes\", {}).get(\"values\", []):\n",
-    "        geo_id_raw = item.get(\"geo_id\")\n",
-    "        if geo_id_raw is None:\n",
-    "            continue  \n",
-    "        try:\n",
-    "            geo_id = int(geo_id_raw)\n",
-    "        except (TypeError, ValueError):\n",
-    "            geo_id = -1 \n",
+    "    # Crear CSV con los datos\n",
+    "    values = data.get(\"included\", [])[0].get(\"attributes\", {}).get(\"values\", [])\n",
+    "    if not values:\n",
+    "        print(\"No hay datos para la península en este día\")\n",
+    "        return {\"statusCode\": 200, \"body\": \"Sin datos\"}\n",
     "\n",
-    "        comunidad = geo_dict.get(geo_id, \"Desconocida\")\n",
-    "        row = {\n",
-    "            \"datetime\": item.get(\"datetime\"),\n",
-    "            \"value\": item.get(\"value\"),\n",
-    "            \"geo_id\": geo_id,\n",
-    "            \"comunidad\": comunidad\n",
-    "        }\n",
-    "        grupos[comunidad].append(row)\n",
+    "    ruta_local = f\"/tmp/demanda_peninsula_{ayer}.csv\"\n",
+    "    ruta_s3 = prefix + f\"demanda_peninsula.csv\"\n",
     "\n",
-    "    #Crear CSV por comunidad y subir a S3\n",
-    "    for comunidad, filas in grupos.items():\n",
-    "        nombre = comunidad.replace(\" \", \"_\") + \".csv\"\n",
-    "        ruta_local = f\"/tmp/{nombre}\"\n",
-    "        ruta_s3 = prefix + nombre\n",
+    "    with open(ruta_local, \"w\", newline=\"\", encoding=\"utf-8\") as f_out:\n",
+    "        writer = csv.DictWriter(f_out, fieldnames=[\"datetime\", \"value\", \"percentage\"])\n",
+    "        writer.writeheader()\n",
+    "        for item in values:\n",
+    "            writer.writerow({\n",
+    "                \"datetime\": item.get(\"datetime\"),\n",
+    "                \"value\": item.get(\"value\"),\n",
+    "                \"percentage\": item.get(\"percentage\")\n",
+    "            })\n",
     "\n",
-    "        with open(ruta_local, \"w\", newline='', encoding=\"utf-8\") as f_out:\n",
-    "            writer = csv.DictWriter(f_out, fieldnames=[\"datetime\", \"value\", \"geo_id\", \"comunidad\"])\n",
-    "            writer.writeheader()\n",
-    "            writer.writerows(filas)\n",
-    "\n",
-    "        s3.upload_file(ruta_local, BUCKET_NAME, ruta_s3)\n",
-    "        print(f\"Subido: s3://{BUCKET_NAME}/{ruta_s3}\")\n",
+    "    s3.upload_file(ruta_local, BUCKET_NAME, ruta_s3)\n",
+    "    print(f\"Subido: s3://{BUCKET_NAME}/{ruta_s3}\")\n",
     "\n",
     "    return {\n",
     "        \"statusCode\": 200,\n",
-    "        \"body\": f\"Archivos diarios guardados en s3://{BUCKET_NAME}/{prefix}\"\n",
+    "        \"body\": f\"Archivo diario de la península guardado en s3://{BUCKET_NAME}/{ruta_s3}\"\n",
     "    }\n"
    ]
   }
