--- a/codigo_ML.ipynb
+++ b/codigo_ML.ipynb
@@ -201,19 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "89fbe77d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# ---------------------------\n",
     "# 5) EVALUATION\n",
     "# ---------------------------\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
     "def evaluate_model(model, df, features, target='demanda_mw'):\n",
     "    preds = model.predict(df[features])\n",
     "    mae = mean_absolute_error(df[target], preds)\n",
-    "    rmse = mean_squared_error(df[target], preds, squared=False)\n",
+    "    rmse = np.sqrt(mean_squared_error(df[target], preds))  # <- calculado manualmente\n",
     "    mape = np.mean(np.abs((df[target] - preds) / (df[target] + 1e-9))) * 100\n",
     "    accuracy = 100 - mape\n",
     "    return {\"MAE: \": mae, \"RMSE: \": rmse, \"MAPE(%): \": mape, \"ACC (%): \": accuracy}, preds\n"
@@ -419,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "mi_entorno",
    "language": "python",
    "name": "python3"
   },
@@ -433,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
