--- a/codigo_ML.ipynb
+++ b/codigo_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f983fa7a",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in d:\\anaconda_hackaboss\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy in d:\\anaconda_hackaboss\\lib\\site-packages (1.26.4)\n",
-      "Requirement already satisfied: sqlalchemy in d:\\anaconda_hackaboss\\lib\\site-packages (2.0.34)\n",
-      "Requirement already satisfied: psycopg2-binary in d:\\anaconda_hackaboss\\lib\\site-packages (2.9.10)\n",
-      "Requirement already satisfied: scikit-learn in d:\\anaconda_hackaboss\\lib\\site-packages (1.5.1)\n",
-      "Collecting lightgbm\n",
-      "  Downloading lightgbm-4.6.0-py3-none-win_amd64.whl.metadata (17 kB)\n",
-      "Requirement already satisfied: joblib in d:\\anaconda_hackaboss\\lib\\site-packages (1.4.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in d:\\anaconda_hackaboss\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in d:\\anaconda_hackaboss\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in d:\\anaconda_hackaboss\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in d:\\anaconda_hackaboss\\lib\\site-packages (from sqlalchemy) (4.11.0)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in d:\\anaconda_hackaboss\\lib\\site-packages (from sqlalchemy) (3.0.1)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in d:\\anaconda_hackaboss\\lib\\site-packages (from scikit-learn) (1.13.1)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in d:\\anaconda_hackaboss\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
-      "Requirement already satisfied: six>=1.5 in d:\\anaconda_hackaboss\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Downloading lightgbm-4.6.0-py3-none-win_amd64.whl (1.5 MB)\n",
-      "   ---------------------------------------- 0.0/1.5 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 1.5/1.5 MB 9.5 MB/s eta 0:00:00\n",
-      "Installing collected packages: lightgbm\n",
-      "Successfully installed lightgbm-4.6.0\n"
+      "Requirement already satisfied: pandas in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (2.2.3)\n",
+      "Requirement already satisfied: numpy in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (2.2.5)\n",
+      "Requirement already satisfied: sqlalchemy in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (2.0.43)\n",
+      "Requirement already satisfied: psycopg2-binary in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (2.9.10)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (1.6.1)\n",
+      "Requirement already satisfied: lightgbm in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (4.6.0)\n",
+      "Requirement already satisfied: joblib in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (1.4.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: greenlet>=1 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from sqlalchemy) (3.2.4)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from sqlalchemy) (4.12.2)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from scikit-learn) (1.15.3)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\david\\anaconda3\\envs\\mi_entorno\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
      ]
     }
    ],
@@ -40,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "85c488e8",
    "metadata": {},
    "outputs": [],
@@ -91,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "741763e8",
    "metadata": {},
    "outputs": [],
@@ -135,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "a14eb232",
    "metadata": {},
    "outputs": [],
@@ -165,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "695a638e",
    "metadata": {},
    "outputs": [],
@@ -201,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "89fbe77d",
    "metadata": {},
    "outputs": [],
@@ -223,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "0977340e",
    "metadata": {},
    "outputs": [],
@@ -289,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "a0efec80",
    "metadata": {},
    "outputs": [
@@ -297,61 +291,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Registros extraídos: 5384\n",
-      "Registros tras preprocess: 5354\n",
-      "Tamaños -> train: 4354 val: 500 test: 500\n",
+      "Registros extraídos: 5388\n",
+      "Registros tras preprocess: 5358\n",
+      "Tamaños -> train: 4358 val: 500 test: 500\n",
       "Columnas disponibles: ['id', 'fecha', 'demanda_mw', 'dayofweek', 'month', 'is_weekend', 'lag_1', 'lag_7', 'lag_14', 'lag_30', 'roll_mean_7', 'roll_std_7', 'roll_mean_14', 'roll_std_14', 'roll_mean_30', 'roll_std_30']\n",
       "Features seleccionadas: ['dayofweek', 'month', 'is_weekend', 'lag_1', 'lag_7', 'lag_14', 'lag_30', 'roll_mean_7', 'roll_std_7', 'roll_mean_14', 'roll_std_14', 'roll_mean_30', 'roll_std_30']\n",
-      "Tamaño TRAIN: (4354, 16)\n",
+      "Tamaño TRAIN: (4358, 16)\n",
       "Tamaño VAL: (500, 16)\n",
       "Training until validation scores don't improve for 50 rounds\n",
-      "[50]\tvalid_0's rmse: 64201.4\n",
-      "[100]\tvalid_0's rmse: 53571.8\n",
-      "[150]\tvalid_0's rmse: 45851.6\n",
-      "[200]\tvalid_0's rmse: 40100.5\n",
-      "[250]\tvalid_0's rmse: 35775.4\n",
-      "[300]\tvalid_0's rmse: 32755.8\n",
-      "[350]\tvalid_0's rmse: 30308\n",
-      "[400]\tvalid_0's rmse: 28683.3\n",
-      "[450]\tvalid_0's rmse: 27618.5\n",
-      "[500]\tvalid_0's rmse: 26797.8\n",
-      "[550]\tvalid_0's rmse: 26182.2\n",
-      "[600]\tvalid_0's rmse: 25741.6\n",
-      "[650]\tvalid_0's rmse: 25421.8\n",
-      "[700]\tvalid_0's rmse: 25172.9\n",
-      "[750]\tvalid_0's rmse: 25002.4\n",
-      "[800]\tvalid_0's rmse: 24888.3\n",
-      "[850]\tvalid_0's rmse: 24830.9\n",
-      "[900]\tvalid_0's rmse: 24780.4\n",
-      "[950]\tvalid_0's rmse: 24737.7\n",
-      "[1000]\tvalid_0's rmse: 24714.4\n",
+      "[50]\tvalid_0's rmse: 64663.9\n",
+      "[100]\tvalid_0's rmse: 54003.8\n",
+      "[150]\tvalid_0's rmse: 46184.5\n",
+      "[200]\tvalid_0's rmse: 40128.9\n",
+      "[250]\tvalid_0's rmse: 35714.6\n",
+      "[300]\tvalid_0's rmse: 32642.7\n",
+      "[350]\tvalid_0's rmse: 30313.2\n",
+      "[400]\tvalid_0's rmse: 28642\n",
+      "[450]\tvalid_0's rmse: 27471.8\n",
+      "[500]\tvalid_0's rmse: 26579.1\n",
+      "[550]\tvalid_0's rmse: 25924.2\n",
+      "[600]\tvalid_0's rmse: 25450.8\n",
+      "[650]\tvalid_0's rmse: 25088.4\n",
+      "[700]\tvalid_0's rmse: 24843.4\n",
+      "[750]\tvalid_0's rmse: 24716.6\n",
+      "[800]\tvalid_0's rmse: 24620\n",
+      "[850]\tvalid_0's rmse: 24560.8\n",
+      "[900]\tvalid_0's rmse: 24516.1\n",
+      "[950]\tvalid_0's rmse: 24479.7\n",
+      "[1000]\tvalid_0's rmse: 24442.7\n",
       "Did not meet early stopping. Best iteration is:\n",
-      "[1000]\tvalid_0's rmse: 24714.4\n",
+      "[1000]\tvalid_0's rmse: 24442.7\n",
       "Modelo guardado en: lgb_demand_model.joblib\n",
-      "Evaluación TRAIN:  {'MAE: ': 10530.88084940568, 'RMSE: ': 16355.043760492512, 'MAPE(%): ': 1.5084285494107907, 'ACC (%): ': 98.4915714505892}\n",
-      "Evaluación VAL:  {'MAE: ': 16873.52662630677, 'RMSE: ': 24714.38875186006, 'MAPE(%): ': 2.5699305486012074, 'ACC (%): ': 97.4300694513988}\n",
-      "Evaluación TEST:  {'MAE: ': 16351.932616483065, 'RMSE: ': 24112.41222527402, 'MAPE(%): ': 2.454652584241292, 'ACC (%): ': 97.54534741575871}\n",
+      "Evaluación TRAIN:  {'MAE: ': 10576.201665973917, 'RMSE: ': np.float64(16421.627165358677), 'MAPE(%): ': np.float64(1.5151277070561522), 'ACC (%): ': np.float64(98.48487229294385)}\n",
+      "Evaluación VAL:  {'MAE: ': 16622.660484838514, 'RMSE: ': np.float64(24442.65941315215), 'MAPE(%): ': np.float64(2.537366254252644), 'ACC (%): ': np.float64(97.46263374574735)}\n",
+      "Evaluación TEST:  {'MAE: ': 16648.784552437286, 'RMSE: ': np.float64(25083.12211034054), 'MAPE(%): ': np.float64(2.5053468339808913), 'ACC (%): ': np.float64(97.4946531660191)}\n",
       "Predicciones próximos 7 dias:\n",
       "       fecha     demanda_mw\n",
-      "0 2025-09-27  618044.330198\n",
-      "1 2025-09-28  713207.629138\n",
-      "2 2025-09-29  708601.656628\n",
-      "3 2025-09-30  706269.968864\n",
-      "4 2025-10-01  703658.119307\n",
-      "5 2025-10-02  685747.591048\n",
-      "6 2025-10-03  645822.066432\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\ANACONDA_HACKABOSS\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "d:\\ANACONDA_HACKABOSS\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "d:\\ANACONDA_HACKABOSS\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n"
+      "0 2025-10-01  695800.540894\n",
+      "1 2025-10-02  680733.006428\n",
+      "2 2025-10-03  650309.565993\n",
+      "3 2025-10-04  595454.317765\n",
+      "4 2025-10-05  653257.800853\n",
+      "5 2025-10-06  658589.831129\n",
+      "6 2025-10-07  649318.455130\n"
      ]
     }
    ],
